--- a/personal-project.csproj
+++ b/personal-project.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>personal_project</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.10"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.7"/>
+    <PackageReference Include="DotNetEnv" Version="2.5.0"/>
   </ItemGroup>
-
 </Project>
