--- a/personal-project.csproj
+++ b/personal-project.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.7"/>
     <PackageReference Include="DotNetEnv" Version="2.5.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.8"/>
   </ItemGroup>
 </Project>
