--- a/personal-project.csproj
+++ b/personal-project.csproj
@@ -16,5 +16,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.8"/>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.202.1"/>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7"/>
   </ItemGroup>
 </Project>
