--- a/personal-project.csproj
+++ b/personal-project.csproj
@@ -18,5 +18,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.8"/>
     <PackageReference Include="AWSSDK.S3" Version="3.7.202.1"/>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10"/>
   </ItemGroup>
 </Project>
