feat: test to deploy on EC2

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
+# RDS SQL SERVER
+CONNECTION_STRING=""
+
 # LOCAL SQL SERVER
-CONNECTION_STRING_LOCAL = ""
+CONNECTION_STRING_LOCAL=""
 
 # JWT Key
-JWT_KEY = ""
-JWT_ISSUER = ""
-JWT_AUDIENCE = "" 
+JWT_KEY=""
+JWT_ISSUER=""
+JWT_AUDIENCE="" 
 
 # LINE PAY
 LINEPAY_CHANNEL_ID=""
