--- a/personal-project.csproj
+++ b/personal-project.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10"/>
+    <PackageReference Include="MailKit" Version="4.2.0"/>
   </ItemGroup>
 </Project>
