feat: modify .env.example

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ LINEPAY_SITE="https://sandbox-api-pay.line.me"
 LINEPAY_RETURN_HOST=""
 LINEPAY_RETURN_CONFIRM_URL="linepay/confirm.html"
 LINEPAY_RETURN_CANCEL_URL="linepay/cancel.html"
+
+# EMAIL
+EMAIL_ACCOUNT=""
+EMAIL_PASSWORD=""
